--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,19 @@
+server:
+  port: 8081
 kafka:
   host: ${KAFKA_HOST:v.perm.ru:9093}
   topic: ${KAFKA_TOPIC:er-log}
-  namegroup: logger
+  # Имя группы kafka для нескольких consumers
+  namegroup: ${KAFKA_NAME_GROUP:logger}
 elasticsearch:
-  host: ${ELASTICSEARCH_HOSTS:elasticsearch:9200}
-  event_doc_type: event
+  host: ${ELASTICSEARCH_HOSTS:192.168.1.20:9200}
+  name_index: ${ELASTICSEARCH_NAME_INDEX:device}
+  #  Размер буфера в документах
+  count_docs: ${COUNT_DOCS:10000}
+  #  Размер буфера в мегабайтах
+  size_queue_mbs: ${SIZE_QUEUE_MBS:5}
+  #  Интервал между запросами
+  flush_intervat_seconds: ${FLUSH_INTERVAT_SECONDS:20}
+  # Кол-во конкурентных запросов
+  count_concurent_requests: ${COUNT_CONCURENT_REQUESTS:1}
+
